...
            <objects>
                <viewController storyboardIdentifier="login" id="BYZ-38-t0r" customClass="LoginViewController" customModule="iOS" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo-text" translatesAutoresizingMaskIntoConstraints="NO" id="EkE-xb-OPh">
                                <rect key="frame" x="107" y="59.666666666666671" width="200" height="166.66666666666663"/>
                                <constraints>
                                    <constraint firstAttribute="width" secondItem="EkE-xb-OPh" secondAttribute="height" multiplier="300:250" id="OSJ-GI-tsa"/>
                                    <constraint firstAttribute="width" constant="200" id="aeB-07-XO3">
                                        <variation key="heightClass=regular-widthClass=regular" constant="250"/>
                                    </constraint>
...
                                    <constraint firstAttribute="width" constant="20" id="9AA-kJ-c5Z"/>
                                </constraints>
                            </view>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="LF5-zW-Ywq">
                                <rect key="frame" x="16" y="294" width="382" height="148"/>
                                <subviews>
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email-Adresse oder Nutzername" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="43F-ld-yjw">
                                        <rect key="frame" x="0.0" y="0.0" width="382" height="44"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="44" id="mci-Z4-1J1"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
                                        <textInputTraits key="textInputTraits" autocorrectionType="no" keyboardType="emailAddress" returnKeyType="next"/>
                                    </textField>
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Passwort" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="0tD-mH-BRy">
                                        <rect key="frame" x="0.0" y="52" width="382" height="44"/>
                                        <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
                                        <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" returnKeyType="go" enablesReturnKeyAutomatically="YES" secureTextEntry="YES"/>
                                    </textField>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DUS-lf-mhE" customClass="LoadingButton" customModule="iOS" customModuleProvider="target">
                                        <rect key="frame" x="0.0" y="104" width="382" height="44"/>
                                        <color key="backgroundColor" red="0.69411764710000001" green="0.015686274510000001" blue="0.21960784310000001" alpha="1" colorSpace="calibratedRGB"/>
                                        <state key="normal" title="Anmelden">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                                <real key="value" value="4"/>
                                            </userDefinedRuntimeAttribute>
...
                                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="99r-cm-Hg2">
                                        <rect key="frame" x="0.0" y="36" width="382" height="32"/>
                                        <fontDescription key="fontDescription" style="UICTFontTextStyleCallout"/>
                                        <state key="normal" title="Als Schüler einloggen"/>
                                        <connections>
                                            <action selector="loginAsTestStudent" destination="BYZ-38-t0r" eventType="touchUpInside" id="WTJ-Uq-chN"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="z12-gq-ugm">
                                        <rect key="frame" x="0.0" y="72" width="382" height="32"/>
...
