...
                                        <rect key="frame" x="0.0" y="143.33333206176758" width="414" height="44"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="g3o-Bv-HLI" id="0wg-ud-B2M">
                                            <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Ausloggen" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" id="eM4-88-LZc">
                                                    <rect key="frame" x="20" y="0.0" width="374" height="44"/>
                                                    <autoresizingMask key="autoresizingMask"/>
                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                                    <color key="textColor" red="0.69411764710000001" green="0.015686274510000001" blue="0.21960784310000001" alpha="1" colorSpace="calibratedRGB"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
...
                        </sections>
                        <connections>
                            <outlet property="dataSource" destination="T0e-Jz-Gtq" id="UPg-ys-OzM"/>
                            <outlet property="delegate" destination="T0e-Jz-Gtq" id="2bi-bY-HU2"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Einstellungen" id="h1G-Yv-C6E"/>
                    <connections>
                        <outlet property="calendarSyncSwitch" destination="hCL-qP-tRu" id="Cxd-Dk-c5d"/>
                        <outlet property="dataUsageCell" destination="8gd-Q3-8OM" id="bhL-Op-1cV"/>
                        <outlet property="imprintCell" destination="kPa-6t-zRL" id="g8j-gg-Tjm"/>
                        <outlet property="logoutCell" destination="g3o-Bv-HLI" id="sVL-1B-ctf"/>
                        <outlet property="userNameLabel" destination="E0B-Gj-SM8" id="7S6-cf-al5"/>
...
